--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.7.2",
+    "bcrypt": "^5.1.1",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
